l'ajout de classe OrdonnanceDetail..